# money

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  money.code-workspace  pyproject.toml  tests_e2e.py
.gitnexus/: meta.json
.sisyphus/: boulder.json
.sisyphus/plans/: 2026-03-14-frontend-implementation.md
app/: constant.py  main.py  pyproject.toml
app/api/: ai.py  analytics.py  anomalies.py  anomaly_settings.py  budgets.py  categories.py  files.py  household.py  imports.py  ocr.py  predictions.py  recycle_bin.py  tags.py  text_parse.py  time_periods.py  transactions.py  users.py
app/core/: config.py  security.py
app/db/: database.py
app/models/: __init__.py  ai_provider.py  budget.py  category.py  household.py  import_record.py  tag.py  time_period.py  transaction.py  user.py
app/schemas/: __init__.py  ai_provider.py  budget.py  category.py  household.py  import_record.py  prediction.py  tag.py  time_period.py  transaction.py  user.py
app/services/: ai_service.py  anomaly_detection.py  bill_parser.py  ocr.py  prediction.py  storage.py  text_parser.py
app/utils/: auth.py  email.py
backend/: .env.example  .gitignore  LLMs.zh-CN.md  README.md  pyproject.toml  setup-env.ps1  setup-env.sh  setup.ps1  setup.sh
backend/.devcontainer/: .zshrc  Dockerfile  devcontainer.json  docker-compose.yml
backend/app/: database.py  init_data.py  main.py  response.py
backend/app/config/: __init__.py  config.py
backend/app/dependencies/: __init__.py  database.py  dependencies.py  token.py  user.py
backend/app/internal/: user.py
backend/app/models/: response.py  token.py  user.py
backend/app/routers/: items.py  login.py  private.py  system.py  users.py
backend/app/tests/: conftest.py
backend/app/utils/: email.py  security.py
data/: money.db
docker/: entrypoint.sh  nginx.conf
docs/designs/: 2026-03-14-frontend-design.md
docs/plans/: 2026-03-14-money-feature-roadmap.md  2026-03-14-money-mvp-implementation.md  2026-03-15-ai-capabilities-design.md  2026-03-15-ai-capabilities-implementation.md  2026-03-15-ai-capabilities-integration.md  2026-03-15-csv-excel-import-implementation.md  2026-03-15-import-phase5.md  2026-03-16-anomaly-detection-design.md  2026-03-16-anomaly-detection-implementation.md
scripts/: init_db.py
tests/: test_config.py  test_models.py  test_schemas.py
tests/api/: test_categories.py  test_transactions.py  test_users.py
tests/services/: test_anomaly_detection.py
webui/: README.md  env.d.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
webui/.devcontainer/: .zshrc  Dockerfile  devcontainer.json
webui/assets/: variables.css
webui/composables/: useChartData.ts  useStatistics.ts
webui/public/: manifest.json  service-worker.js
webui/router/: index.ts
(+101 files in other folders)
