[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "python-multipart",
    "email-validator",
    "passlib[bcrypt]",
    "tenacity",
    "pydantic",
    "emails",
    "jinja2",
    "alembic",
    "httpx",
    "psycopg[binary]",
    "sqlmodel",
    # Pin bcrypt until passlib supports the latest
    "bcrypt",
    "pydantic-settings",
    "sentry-sdk[fastapi]",
    "pyjwt",
    "orjson",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
